[package]
name = "databases"
version = "0.1.0"
authors = ["maxluchs"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.16"
terminal-menu = "1.9.7"
rustyline = "7.1.0"


